[gd_scene load_steps=4 format=3 uid="uid://cxpdj38s1lj8"]

[ext_resource type="Script" path="res://scripts/guiscripts/how_to_play_screen.gd" id="1_7lfl0"]
[ext_resource type="Texture2D" uid="uid://cudtkaqll355e" path="res://assets/overlays/how_to_play.png" id="2_jfhf3"]
[ext_resource type="Theme" uid="uid://chrmqqoajoemb" path="res://assets/misc/main.tres" id="3_1c5v8"]

[node name="HowToPlayScreen" type="CanvasLayer"]
script = ExtResource("1_7lfl0")

[node name="HowToPlayImage" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -230.0
offset_right = 230.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jfhf3")

[node name="ReturnButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.5
offset_top = -140.0
offset_right = 30.5
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_1c5v8")
text = "Return"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="focus_exited" from="ReturnButton" to="." method="_on_cancel_button_focus_exited"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_cancel_button_pressed"]
